# st53l0x_modul

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
firmware/: CMakeLists.txt  README.md  main.c  stm32l011d3.ld
firmware/cubemx/: .mxproject  CMakeLists.txt  Makefile  STM32L011F4Ux_FLASH.ld  firmware.ioc  firmware.txt  mx.scratch
firmware/cubemx/Inc/: i2c.h  spi.h  stm32l0xx_it.h
firmware/cubemx/Src/: main.c  spi.c  stm32l0xx_it.c
firmware/vl53l0x_api/: CMakeLists.txt
firmware/vl53l0x_api/core/inc/: vl53l0x_api_strings.h
firmware/vl53l0x_api/platform/src/: vl53l0x_i2c_libopencm3.c  vl53l0x_platform.c  vl53l0x_platform_log.c
firmware_hal/: .mxproject  CMakeLists.txt  Makefile  STM32L011F4Ux_FLASH.ld  aspi.c  aspi.h  firmware.ioc  firmware.txt  main.c  mx.scratch  options.yml  registers.h  sensormodule.c
firmware_hal/Inc/: main.h  stm32l0xx_it.h
firmware_hal/Src/: gpio.c  i2c.c  main.c  spi.c  stm32l0xx_it.c  system.tmp
firmware_hal/vl53l0x_api/: CMakeLists.txt
firmware_hal/vl53l0x_api/core/inc/: vl53l0x_api_strings.h
firmware_hal/vl53l0x_api/platform/src/: vl53l0x_i2c_libopencm3.c  vl53l0x_platform.c  vl53l0x_platform_log.c
sensormodule_pcb/: CAMtastic1.Cam  sensormodule.PcbDoc  sensormodule.PcbLib  sensormodule.SchDoc  sensormodule.SchLib  sensormodule_bak_010118.PcbDoc  sensormodule_panel.PcbDoc  sensormodule_pcb.OutJob  sensormodule_pcb.PrjPcb  sensormodule_pcb.PrjPcbStructure
sensormodule_pcb/Project Outputs for sensormodule_pcb/: Design Rule Check - sensormodule.drc  Design Rule Check - sensormodule.html
sensormodule_pcb/Project Outputs for sensormodule_pcb/Generate Files/: Status Report.Txt
sensormodule_pcb/Project Outputs for sensormodule_pcb/Generate Files/gerbers/: sensormodule_panel-macro.APR_LIB  sensormodule_panel.DRR  sensormodule_panel.EXTREP  sensormodule_panel.GBL  sensormodule_panel.GBO  sensormodule_panel.GBP  sensormodule_panel.GBS  sensormodule_panel.GKO  sensormodule_panel.GTL  sensormodule_panel.GTO  sensormodule_panel.GTP  sensormodule_panel.GTS  sensormodule_panel.LDP  sensormodule_panel.REP  sensormodule_panel.RUL  sensormodule_panel.TXT  sensormodule_panel.apr
sensormodule_pcb/__Previews/: sensormodule.PcbDocPreview  sensormodule.SchDocPreview  sensormodule_bak_010118.PcbDocPreview  sensormodule_panel.PcbDocPreview
